fix: overlapping icons

--- a/frontend/assets/css/text-viewer2.scss
+++ b/frontend/assets/css/text-viewer2.scss
@@ -94,7 +94,7 @@ section#text-viewer {
           cursor: pointer;
           &.icons {
             display: flex;
-            min-width: 0;
+            min-width: 120px;
           }
           &.icon {
             width: 60px;
